2002-07-09  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.30.2.

2002-07-01  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Don't use libdir value defined
	in libMagick.al.

	* output-pstoedit.h: Include pstoedit/pstoedit.h.

	* Makefile.am: improved pstoedit supports.

	* autotrace-config.af: Refer LIBPSTOEDIT_LIBS.

	* autotrace.pc.in (Libs): Likewise.

2002-06-30  Masatake YAMATO  <yamato@redhat.com>

	* output.c (at_*_get_handler_by_suffix): Return 
	NULL if suffix is NULL pointer or an empty string.

	* input.c (at_input_list_new): Pass both NULL and "*"
	to GetMagickInfo. Suggested by valhalla@imagemagick.org
	on magick-users@imagemagick.org.

	* Makefile.am (EXTRA_DIST): Added autotrace-config.in.

	* autotrace.c: Remove make_string.

	* configure.in: Put double quotes arount  version and url.

	* input-magick.c (magick_load_image): Don't use msg_data
	as a condition. Use msg_func instead. Use exception.reason
	instead of exception.description.
	Initialize image.
	
	* autotrace.c (make_string): Put '"' around
	an arg.

2002-06-26  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (libautotrace_la_SOURCES): Use '()'
	instead of "{}".

2002-06-11  Masatake YAMATO  <yamato@redhat.com>

	* README: Reorganized.

	* exception.h, input.h, output.h and types.h: Added
	extern "C" {} for C++ clinets.

2002-06-09  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (make_string): New macro.
	(at_version, at_home_site): Use make_string.

	* configure.in (AUTOTRACE_VERSION): Remove double quotes.
	(AUTOTRACE_WEB): Likewise.
	(LT_*): Introduce libtool.
	Check the broken ImageMagick.la.

	* Makefile.am (lib_LTLIBRARIES): Introduce libtool.

2002-06-05  Masatake YAMATO  <yamato@redhat.com>

	* output.h (at_output_add_handler): Added stab.

	* output.c: Added experimental pstoedit supports.

	* output-pstoedit.[ch]: New files.

	* configure.in(AC_ARG_PROGRAM, AM_SANITY_CHECK,AC_PROG_INSTALL): 
	Added.
	Added experimental pstoedit supports.
